objects/STC_Process_Controlls__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Behavior controls for Storage Craft custom processes. Enable/Disable and toggles.</description>
    <fields>
        <fullName>Case_Auto_Assignment_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enable auto-assign cases from enabled queues to active membership using load balancing logic</inlineHelpText>
        <label>Case Auto-Assignment Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_EU_Url__c</fullName>
        <label>License EU URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Login__c</fullName>
        <label>License Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Passphrase__c</fullName>
        <label>License Passphrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Password__c</fullName>
        <label>License Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_US_URL__c</fullName>
        <label>License US URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Username__c</fullName>
        <label>License Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>STC Process Controls</label>
</CustomObject>